[gd_scene load_steps=3 format=3 uid="uid://ccl5j7hyygak4"]

[ext_resource type="Script" uid="uid://d621wcfilbpv" path="res://scenes/hud.gd" id="1_ahhtf"]
[ext_resource type="FontFile" uid="uid://tv8nj8jwrdi3" path="res://fonts/Super Kindly.ttf" id="2_oo0fn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="OxygenCount" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_oo0fn")
text = "Oxygen: 100%"
vertical_alignment = 1

[node name="DepthMeter" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -145.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_oo0fn")
text = "Current Depth: 0m"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MaxDepthMeter" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -163.0
offset_top = 20.0
offset_bottom = 43.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_oo0fn")
text = "Maximum Depth: 0m"
horizontal_alignment = 2
vertical_alignment = 1

[node name="StartGameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = 36.0
offset_right = 45.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_oo0fn")
text = "Start Game"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_oo0fn")
text = "Deep Delve"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
